・deploy:restartタスク追加。 ・welcomeページ変更。

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-HTML>
+<HTML>
 <HEAD>
 <TITLE>Hello World in HTML</TITLE>
 </HEAD>
 <BODY>
-<CENTER><H1>Hello World!</H1></CENTER>
+<CENTER><H1>こんにちわわん</H1></CENTER>
 </BODY>
 </HTML>
